# c-cpp-style-guide

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  compile_commands.json  setup_hooks.bat  test.c
.githooks/: commit-msg  pre-commit
.github/workflows/: test.yaml
test/: format_check.sh
test/input/: test.c
